--- a/index.html
+++ b/index.html
@@ -30,46 +30,48 @@
                 <div class="col-md-8 mx-auto my-auto text-white text-center">
                     <img src="img/user.jpg" class="img-fluid rounded-circle img-profile" alt="User" />
                     <h1 class="my-4">Hi, I'm Szzttt.</h1>
-                    <p class="lead mb-5 font-weight-bold">
-                        An Experienced
-                        <span class="typist" data-typist="Web Developer, Blogger">Web
-                            Developer</span>
-                    </p>
+
                     <a href="https://github.com/szzttt"
                         class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" target=“_blank”>
                         My Github Repositories
                     </a>
+                    <hr>
+                    <a target="_blank" href="./微信高保真/index.html"
+                        class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" target=“_blank”>
+                        微信高保真
+                    </a>
+                    <a target="_blank" href="./外卖直播/index.html"
+                        class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" target=“_blank”>
+                        美团外卖直播
+                    </a>
+                    <hr>
+                    <hr>
+
+
+
+                    <a target="_blank" href="./品优购/1-首页.html"
+                        class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" target=“_blank”>
+                        品优购<span class="sr-only">(current)</span></a>
+
+
+                    <a target="_blank" href="./vue/vue音乐播放器/szt.html"
+                        class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" target=“_blank”>
+                        Vue</a>
+
+
+                    <a target="_blank" href="./学成在线/学成在线.html"
+                        class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" target=“_blank”>
+                        学成在线</a>
+
+
+
+
                 </div>
             </div>
         </div>
     </section>
 
-    <!--navigation-->
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top sticky-navigation" id="beleme-navbar">
-        <a class="navbar-brand d-md-none" href="index.html">
-            Beleme
-        </a>
-        <button class="navbar-toggler navbar-toggler-right text-white" type="button" data-toggle="collapse"
-            data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span data-feather="grid"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                    <a class="nav-link page-scroll " target="_blank" href="./品优购/1-首页.html">品优购<span
-                            class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" target="_blank" href="./vue/vue音乐播放器/szt.html">Vue</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" target="_blank" href="./学成在线/学成在线.html">学成在线</a>
-                </li>
 
-            </ul>
-        </div>
-    </nav>
 
 
 
