--- a/index.html
+++ b/index.html
@@ -36,14 +36,19 @@
                         My Github Repositories
                     </a>
                     <hr>
+                     <a target="_blank" href="./做方案/做方案.html"
+                        class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" target=“_blank”>
+                        做方案
+                    </a>
+                     <a target="_blank" href="./外卖直播/index.html"
+                        class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" target=“_blank”>
+                        美团外卖直播
+                    </a>
                     <a target="_blank" href="./微信高保真/index.html"
                         class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" target=“_blank”>
                         微信高保真
                     </a>
-                    <a target="_blank" href="./外卖直播/index.html"
-                        class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" target=“_blank”>
-                        美团外卖直播
-                    </a>
+                   
                     <hr>
                     <hr>
 
