--- a/做方案/做方案.html
+++ b/做方案/做方案.html
@@ -45,6 +45,13 @@
       $axure.utils.getReloadPath = function() { return 'resources/reload.html'; };
     </script>
   </head>
+  <style>
+  body {
+    display: flex;
+    margin: auto;
+    padding: 0;
+  }
+</style>
   <body>
     <div id="base" class="">
 
